--- a/index.html
+++ b/index.html
@@ -248,6 +248,12 @@
       <button class="btn btn-primary btn-lg" disabled title="Executable not available yet due to licensing.">Download EXE</button>
     </div>
   </section>
+  <!-- Footer Section with License Information -->
+<footer class="bg-dark text-white text-center p-3 mt-5">
+  <p class="mb-0">MIT License</p>
+  <p class="mb-0">Copyright (c) 2025 Ahmed Mohammed</p>
+</footer>
+
   
   
   <!-- Bootstrap JS Bundle -->
