--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#features">About</a>
+            <a class="nav-link active" aria-current="page" href="#">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -85,11 +85,12 @@
     </p>
     
 
-
-        <h2 class="display-4 fw-bold">Vision</h2>
+    <div>
+    <h2 class="display-4 fw-bold">Vision</h2>
     <p class="lead">
         AquaView was built out of a deep passion for environmental engineering and a commitment to simplifying water quality analysis. It is not just a tool, but a step towards solving real-world environmental challenges and fostering growth as an aspiring engineer.
     </p>
+    </div>
     </div>
 
 
@@ -267,6 +268,7 @@
       <a href="app-release.apk" download>
         <button class="btn btn-success btn-lg me-2">Download APK</button>
       </a>
+      <p>            </p>
       <!-- EXE Download Button (disabled) -->
       <button class="btn btn-primary btn-lg" disabled title="Executable not available yet due to licensing.">Download EXE</button>
     </div>
