--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#abou">Source Code</a>
+
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="https://ahmed01ttfret.github.io/AquaView-Documentation/">Documentation</a>
+          </li>
           </li>
         </ul>
         
