--- a/index.html
+++ b/index.html
@@ -279,15 +279,17 @@
   
   <section id="download" class="p-5 text-center bg-light">
     <h2>Download AquaView</h2>
-    <p>Get AquaView for your device. The APK is ready for download, but the Windows executable is coming soon!</p>
+    <p>Get AquaView for your device.</p>
     <div class="mt-4">
       <!-- APK Download Button -->
       <a href="app-release.apk" download>
         <button class="btn btn-success btn-lg me-2">Download APK</button>
       </a>
       <p>            </p>
-      <!-- EXE Download Button (disabled) -->
-      <button class="btn btn-primary btn-lg" disabled title="Executable not available yet due to licensing.">Download EXE</button>
+      <!-- EXE Download -->
+      <a href='winAquaView.exe' download>
+      <button class="btn btn-success btn-lg me-2 >Download EXE</button>
+        </a>
     </div>
   </section>
   <!-- Footer Section with License Information -->
