--- a/index.html
+++ b/index.html
@@ -286,14 +286,15 @@
         <button class="btn btn-success btn-lg me-2">Download APK</button>
       </a>
       <p>            </p>
+      <a href="winAquaView.exe" download>
+        <button class="btn btn-success btn-lg me-2">Download exe(windows version)</button>
+      </a>
       <!-- EXE Download -->
-      <a href='winAquaView.exe' download>
-      <button class="btn btn-success btn-lg me-2 >Download EXE</button>
-        </a>
+      
     </div>
   </section>
   <!-- Footer Section with License Information -->
-<footer class="bg-dark text-white text-center p-3 mt-5">
+    <footer class="bg-dark text-white text-center p-3 mt-5">
   <p class="mb-0">MIT License</p>
   <p class="mb-0">Copyright (c) 2025 Ahmed Mohammed</p>
 </footer>
