--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a class="nav-link" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#abou">Source Code</a>
+            <a class="nav-link active" aria-current="page" href="https://github.com/Ahmed01ttfret/AuaView_code">Source Code</a>
 
             <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="https://ahmed01ttfret.github.io/AquaView-Documentation/">Documentation</a>
